# aiplatform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_model_registry_base_url.py  0003_agentic_memory.py  0004_workflows.py  0005_agno_agent_sessions.py  0006_agno_team_sessions.py  0007_knowledge_skills.py  0008_run_control.py  0009_ui_metadata_registry.py  0010_ui_skill_type.py  0011_business_objects.py  0012_observationevent_engines.py  0013_execution_engine.py  0014_attachments.py  0015_workflow_schedule_webhook.py  0016_quota_management.py
app/: main.py
app/agno_runtime/: agent_storage.py  agui_interface.py  engine.py  explicit_memory.py  mcp_client.py  memory_db.py  tool_adapter.py  workflow_context.py  workflow_executor.py  workflow_runner.py
app/api/: deps.py
app/attachments/: extractor.py  ocr_client.py  service.py  storage_client.py
app/businessobjects/: __init__.py  service.py  validator.py
app/core/: auth_context.py  config.py  exceptions.py  identity.py  identity_context.py  logging.py  middleware.py  run_control.py  workflow_trigger_context.py
app/db/: base.py  session.py
app/events_v2/: __init__.py  service.py
app/execution/: __init__.py  service.py
app/knowledge/: __init__.py  client.py  exceptions.py  executor.py  mapper.py  models.py  service.py
app/models/: __init__.py  attachment.py  (+18 more)
docker/: entrypoint.sh
docs/: API.md  Architecture.md  Development.md  ERD.md  Knowledge.md  ModelRegistry.md  Workflow.md
tests/: conftest.py
(+110 files in other folders)
