[project]
name = "agno-runtime-platform"
version = "1.0.0"
description = "Enterprise Agno Runtime Platform - metadata-driven agent orchestration"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "redis==5.2.1",
    "agno==1.8.4",
    "openai==1.66.0",
    "anthropic==0.111.0",
    "httpx==0.28.1",
    "python-multipart==0.0.20",
    "python-json-logger==0.1.11",
    "structlog==24.4.0",
    "opentelemetry-api==1.29.0",
    "opentelemetry-sdk==1.29.0",
    "opentelemetry-instrumentation-fastapi==0.50b0",
    "sse-starlette==2.2.1",
    "tenacity==9.0.0",
    "python-dotenv==1.0.1",
    "ulid-py==1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "ruff==0.8.4",
    "aiosqlite==0.20.0",
    "faker==33.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy `Mapped["ClassName"]` forward references are resolved by the
# ORM's mapper configuration at runtime (see configure_mappers()), not by
# Python's own name resolution - ruff's F821 cannot see that and flags
# these as undefined names. Verified via configure_mappers() in CI.
"app/models/*.py" = ["F821"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]